2019-10-01  Gavin Smith  <gavinsmith0123@gmail.com>

	Fix XS module loading.

	* tp/Texinfo/XSLoader.pm (init): Remove code looking for a Perl 
	file in Perl's search path based on the package name of the 
	module.  This does not correspond to a file and will be the same
	package name for XS and non-XS modules.  Remove 'standalone' and 
	'libtool' options for TEXINFO_XS variable.

	* tp/Texinfo/MiscXS.pm, tp/Texinfo/XS/MiscXS.xs: Use 
	Texinfo::MiscXS namespace.

	* tp/Texinfo/Convert/Paragraph.pm, tp/Texinfo/XS/XSParagraph.xs:
	Use Texinfo::Convert::Paragraph namespace.

2019-10-01  Gavin Smith  <gavinsmith0123@gmail.com>

	Fix XS fallback.

	* tp/Texinfo/XSLoader.pm (init): Do not take an argument of a 
	package name to use for the symbols found in the loaded module - 
	rely on the loaded module using the correct package name in the 
	first place.

2019-10-01  Gavin Smith  <gavinsmith0123@gmail.com>

	Attempt to fix fallback to pure Perl Texinfo::Parser.

	* tp/Texinfo/ModulePath.pm.in: Remove hook from @INC to load the 
	right version of Texinfo::Parser.
	* tp/Texinfo/XSLoader.pm: Add argument for an extra Perl file
	to be loaded in addition to the XS module.
	* tp/Texinfo/Parser.pm: Load XS or pure Perl module by
	calling Texinfo:XSLoader::init.  This is the same approach as 
	for Texinfo::Convert::Paragraph.  Load 
	tp/Texinfo/XS/parsetexi/Parsetexi.pm only after the XS 
	module has been successfully loaded.

	* tp/Texinfo/XS/parsetexi/Parsetexi.pm: Remove call to 
	Texinfo:XSLoader::init.

2019-10-01  Gavin Smith  <gavinsmith0123@gmail.com>

	* configure.ac: Bump version to 6.7dev, remove dist-xz from 
	options.

2019-10-01  Gavin Smith  <gavinsmith0123@gmail.com>

	Fix running texi2any.pl from the source directory.

	* tp/Texinfo/ModulePath.pm.in: Make $top_builddir and 
	$top_srcdir variables available.
	* tp/texi2any.pl: Use $Texinfo::ModulePath::top_srcdir instead
	of referring to an environment variable which may not be set.
