@@ -1,5 +1,14 @@
 2019-10-01  Gavin Smith  <gavinsmith0123@gmail.com>
 
+	Reinstate TEXINFO_XS_PARSER variable.
+
+	* tp/Texinfo/Parser.pm: If TEXINFO_XS_PARSER is set to 0, do not 
+	load the XS parser module.
+	* tp/Texinfo/XSLoader.pm: Make a warning message more 
+	informative.
+	
+2019-10-01  Gavin Smith  <gavinsmith0123@gmail.com>
+
 	Fix XS module loading.
 
 	* tp/Texinfo/XSLoader.pm (init): Remove code looking for a Perl 
